--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -1,5 +1,15 @@
+<?xml version="1.0" encoding="utf-8"?>
 <resources>
 
     <string name="app_name">Taskinator</string>
+    <string name="title_activity_main">Taskinator</string>
+    <string name="action_settings">Settings</string>
+    <string name="hello_world">Hello world!</string>
+    <string name="title_activity_activite_tab">ActiviteTab</string>
+    <string name="title_activity_tab_list">TabList</string>
+    <string name="title_activity_tab_task">TabTask</string>
+    <string name="stateList">No List</string>
+    <string name="newList">Create new list</string>
+    
 
 </resources>
