--- a/Documentation/Rapport/Rapport_COUTABLE_RULLIER.tex
+++ b/Documentation/Rapport/Rapport_COUTABLE_RULLIER.tex
@@ -122,7 +122,8 @@ identifierstyle=\color{blue}
 {\LARGE Projet : Gestionnaire simple de tâches} \\
 \vspace{1cm}
 \textbf{Taskinator Android} \\
-\includegraphics[height=1cm]{Images/Taskinator.png} \\
+\vspace{0.3cm}
+\includegraphics[height=1cm]{Images/Taskinator.png} \includegraphics[height=1cm]{Images/android.png} \\
 \vspace{1cm}
 COUTABLE Guillaume, RULLIER Noémie \\
 \today
