Add button clear all lists

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -14,5 +14,8 @@
     <string name="modifyList">Modify list</string>
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
+    <string name="clearAllLists">Clear all lists</string>
+    
+    
 
 </resources>
