Some cleaning and add number of task checked

--- a/res/values/strings.xml
+++ b/res/values/strings.xml
@@ -15,7 +15,6 @@
     <string name="ok">OK</string>
     <string name="cancel">Cancel</string>
     <string name="clearAllLists">Clear all lists</string>
-    
-    
+    <string name="taskChecked">0/0</string>
 
 </resources>
