Modify one scenario

--- a/Documentation/Rapport/Rapport_COUTABLE_RULLIER.tex
+++ b/Documentation/Rapport/Rapport_COUTABLE_RULLIER.tex
@@ -192,10 +192,12 @@ Ce scénario permet de créer des listes et de les modifiers. Il permet aussi de
 \begin{enumerate}
 \item{L'utilisateur choisit de créer une liste et lui donne un nom \textit{Course}.}
 \item{Il décide ensuite de créer une nouvelle liste et lui donne un nom \textit{Sac de voyage}.}
-\item{Il décide ensuite d'inverser ces deux listes, pour cela il reste longtemps appuyé sur la liste \textit{Sac de voyage} et la glisse un rangplus haut.}
+\item{Il décide ensuite d'inverser ces deux listes, pour cela il reste longtemps appuyé sur la liste \textit{Sac de voyage} et la glisse un rang plus haut.}
 \item{L'utilisateur va ensuite supprimer la liste \textit{Course}.}
-\item{L'utilisateur va ensuite ouvrir une autre application et revenir sur \textit{Taskinator}. Il peut constater que l'application est ouverte avec l'état dans lequel on l'a quittée.}
-\item{Cette fois-ci, l'utilisateur quitte l'application. De même s'il l'a lance à nouveau, celle-ci est ouverte avec le dernier état dans lequel on l'a quittée. C'est à dire que si une liste était ouverte ou fermée quand on a quitté l'application, celle-ci sera dans le même état quand on y reviendra.}
+\item{L'utilisateur va ensuite ouvrir une autre application et revenir sur \textit{Taskinator}. Il peut constater que l'application est ouverte avec l'état dans lequel on l'a quittée. C'est à dire que si une liste était ouverte ou fermée quand on a quitté l'application, celle-ci sera dans le même état quand on y reviendra.}
+\item{L'utilisateur décide de créer une nouvelle tâche dans \textit{Sac de voyage}. Pendant qu'il entre le nouveau nom de cette tâche, il va recevoir un appel. Lorsque l'appel est terminé, il sera automatiquement redirigé vers Taskinator exactement dans le même état qu'avant l'appel. S'il avait commencé à taper \textit{Chauss}, il retrouvera le même début de mot.}
+\item{L'utilisateur va recevoir un appel pendant qu'il est en train de rentrer un nom pour sa liste}
+\item{Cette fois-ci, l'utilisateur quitte l'application. De même s'il l'a lance à nouveau, celle-ci est ouverte avec le dernier état dans lequel on l'a quittée.}
 \end{enumerate}
 
 
